third_party/move/move-compiler-v2/tests/acquires-checker/globals.exp

Diagnostics:
error: missing acquires annotation for `R`
   ┌─ tests/acquires-checker/globals.move:13:9
   │
13 │     fun read(a: address): u64 {
   │         ^^^^
14 │         let r = borrow_global<R>(a);
   │                 ------------------- acquired here

error: missing acquires annotation for `R`
   ┌─ tests/acquires-checker/globals.move:18:9
   │
18 │     fun write(a: address, x: u64): u64 {
   │         ^^^^^
19 │         let r = borrow_global_mut<R>(a);
   │                 ----------------------- acquired here

warning: Unused parameter `x`. Consider removing or prefixing with an underscore: `_x`
   ┌─ tests/acquires-checker/globals.move:18:27
   │
18 │     fun write(a: address, x: u64): u64 {
   │                           ^
